fix vertical align

--- a/src/bookings/Bookings.css
+++ b/src/bookings/Bookings.css
@@ -65,4 +65,5 @@
 
 .multi-pnr-view-label {
   padding-right: 20px;
+  vertical-align: super;
 }
